--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,24 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Lalezar&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+#swiper-summit_2023 .swiper-pagination-bullet, #swiper-palestrantes .swiper-pagination-bullet{
+    background:#FF007E;
+}
+
+#swiper-summit_2023-reviews .swiper-pagination-bullet{
+    background: white;
+}
+
+#swiper-summit_2023 .swiper-pagination, #swiper-summit_2023-reviews .swiper-pagination{
+    bottom: 0px !important;
+}
+
+.swiper{
+    padding-bottom: 20px !important;
+}
+
+#swiper-palestrantes .swiper, #swiper-summit_2023-reviews .swiper{
+    padding-bottom: 0px !important;
+}
+  
