--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,23 +4,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Lalezar&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-#swiper-summit_2023 .swiper-pagination-bullet, #swiper-palestrantes .swiper-pagination-bullet{
-    background:#FF007E;
-}
-
-#swiper-summit_2023-reviews .swiper-pagination-bullet{
-    background: white;
-}
-
-#swiper-summit_2023 .swiper-pagination, #swiper-summit_2023-reviews .swiper-pagination{
+#main .swiper-pagination{
+    margin-top: 20px;
+    position: relative;
     bottom: 0px !important;
+    left: 50% !important;
+    transform: translateX(-50%) !important; 
 }
 
-.swiper{
-    padding-bottom: 20px !important;
-}
-
-#swiper-palestrantes .swiper, #swiper-summit_2023-reviews .swiper{
-    padding-bottom: 0px !important;
+#main .swiper-pagination-bullet{
+    background: rgb(133, 133, 133);
 }
   
